{
    "name": "InputSystem",
    "maps": [
        {
            "name": "player",
            "id": "1649ebc2-c01a-419d-872a-c5aaa3b7a1d3",
            "actions": [
                {
                    "name": "move",
                    "type": "PassThrough",
                    "id": "6cb25954-7bed-4ee3-b407-9e209cc9ea38",
                    "expectedControlType": "Button",
                    "processors": "",
                    "interactions": ""
                },
                {
                    "name": "jump",
                    "type": "PassThrough",
                    "id": "cbfdd561-c293-45e5-bc82-3fe8459594cb",
                    "expectedControlType": "Button",
                    "processors": "",
                    "interactions": ""
                },
                {
                    "name": "LMB",
                    "type": "PassThrough",
                    "id": "6fba7118-7f7b-405a-a74c-47dd551d1cdb",
                    "expectedControlType": "Button",
                    "processors": "",
                    "interactions": "Press"
                },
                {
                    "name": "mousePosition",
                    "type": "PassThrough",
                    "id": "9509eab7-4a8b-4c17-93fe-7dd2d735a786",
                    "expectedControlType": "Vector2",
                    "processors": "",
                    "interactions": ""
                }
            ],
            "bindings": [
                {
                    "name": "Arrow Keys",
                    "id": "4123ee63-c870-44f1-baa7-fe884b257314",
                    "path": "1DAxis",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "move",
                    "isComposite": true,
                    "isPartOfComposite": false
                },
                {
                    "name": "negative",
                    "id": "6ede2a9e-975c-4d10-9781-dcc1e4569a94",
                    "path": "<Keyboard>/a",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "move",
                    "isComposite": false,
                    "isPartOfComposite": true
                },
                {
                    "name": "positive",
                    "id": "537ce5e9-4320-479d-973e-039977f1696f",
                    "path": "<Keyboard>/d",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "move",
                    "isComposite": false,
                    "isPartOfComposite": true
                },
                {
                    "name": "",
                    "id": "5e61c9e1-8447-43c1-9179-fd4fc0189289",
                    "path": "<Keyboard>/space",
                    "interactions": "Press",
                    "processors": "",
                    "groups": "",
                    "action": "jump",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "e7bf87ee-8d13-4e4e-9277-d5039ea5b6cf",
                    "path": "<Mouse>/leftButton",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "LMB",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "f9bf1286-296c-4c2f-908f-8498b4099479",
                    "path": "<Mouse>/position",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "mousePosition",
                    "isComposite": false,
                    "isPartOfComposite": false
                }
            ]
        }
    ],
    "controlSchemes": []
}